fixed padding issues on mobile

--- a/index.css
+++ b/index.css
@@ -206,6 +206,15 @@ footer > div{
     padding-left: 0;
 }
 
+.excont1, .excont2{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.excont1 > h4{
+    padding-top: 6px;
+}
+
 .kcontainer, .intro{
     padding: 10px;
     padding-top: 30px
